added clearlag.yml and otherhome admin commands